--- a/cardgame/index.html
+++ b/cardgame/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Card Game</title>
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<div id="stats">
+    <button id="deal-button">Deal</button>
+    <div>Deal Count: <span id="deal-count">1</span></div>
+    <hr> <!-- Divider for visual separation -->
+    <div style="text-align: right;">
+        <div>Amount to Spend This Deal: <span id="amount-to-spend">5</span></div>
+        <div>Amount Spent This Deal: <span id="amount-spent">0</span></div>
+        <hr> <!-- Divider -->
+        <div>Amount Spent Total: <span id="amount-spent-total">0</span></div>
+        <div>Total Benefit: <span id="total-benefit">0</span></div>
+        <div>Feature Discounts: <span id="feature-discounts">0</span></div>
+        <div>Expense Saved: <span id="expense-saved">0</span></div>
+        <div>Cost Saved: <span id="cost-saved">0</span></div>
+    </div>
+</div>
+    
+<div id="game-area">
+    <div class="column">
+        <h2>Dealt Cards</h2>
+        <div id="card-deck" class="card-container"></div>
+    </div>
+    <div class="column">
+        <h2>Played Cards</h2>
+        <div id="played-cards" class="card-container"></div>
+    </div>
+</div>
+<script src="script.js"></script>
+</body>
+</html>
 
